// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Popup component at small screen size should render properly when it is closed 1`] = `
.c0 {
  background: #ffffff;
  display: flex;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67, 84, 101, 0.5);
  box-sizing: border-box;
  border-top-left-radius: 1.2rem;
  border-top-right-radius: 1.2rem;
  overflow: hidden;
}

@media (max-width:767px) {
  .c0 {
    width: 100%;
    height: calc(100% - 2.4rem);
    animation: buZueW 0.4s cubic-bezier(0,0,0.33,1);
  }
}

@media (min-width: 768px) and (max-width: 1279px) {
  .c0 {
    border-radius: 1.2rem;
    max-width: 72%;
    min-width: 200px;
    max-height: 80%;
  }
}

@media (min-width: 1280px) {
  .c0 {
    border-radius: 1.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

@media (max-width:768px) {
  .c0 {
    animation: dfPvjS 0.2s cubic-bezier(0,0,0.33,1);
  }
}

<div>
  <div
    class="c0"
    minheight="200px"
    minwidth="200px"
  />
</div>
`;

exports[`Modal Popup component at small screen size should render properly when it is open 1`] = `
.c0 {
  background: #ffffff;
  display: flex;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67, 84, 101, 0.5);
  box-sizing: border-box;
  border-top-left-radius: 1.2rem;
  border-top-right-radius: 1.2rem;
  overflow: hidden;
}

@media (max-width:767px) {
  .c0 {
    width: 100%;
    height: calc(100% - 2.4rem);
    animation: cQwfQi 0.4s cubic-bezier(0,0,0.33,1);
  }
}

@media (min-width: 768px) and (max-width: 1279px) {
  .c0 {
    border-radius: 1.2rem;
    max-width: 72%;
    min-width: 200px;
    max-height: 80%;
  }
}

@media (min-width: 1280px) {
  .c0 {
    border-radius: 1.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

@media (max-width:768px) {
  .c0 {
    animation: hvOvm 0.2s cubic-bezier(0,0,0.33,1);
  }
}

<div>
  <div
    class="c0"
    minheight="200px"
    minwidth="200px"
    open=""
  />
</div>
`;
